# meteofungi

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.adoc  CODE_OF_CONDUCT.adoc  CONTRIBUTING.adoc  CONTRIBUTORS.adoc  README.adoc  abe.csv  bey.csv  cou.csv  dashboard.py  data_preparation.py  gad.csv  meta_parameters.parquet  meta_params.parquet  meta_stations.parquet  metrics.parquet  neb.csv  ogd-smn-precip_meta_parameters.csv  ogd-smn-precip_meta_stations.csv  ogd-smn_meta_parameters.parquet  pyproject.toml  rainfall.parquet  requirements.txt  ux_metrics.py  weather_data.parquet
.github/workflows/: download-file.yml  download_file_python.yml  run_tests_ci.yml
data/: meta_datainventory.parquet  meta_parameters.parquet  meta_stations.parquet  metrics.parquet  weather_data.parquet
docs/: CONTRIBUTING.adoc  CONTRIBUTORS.adoc  issue_management.adoc
src/meteofungi/dashboard/: constants.py  dashboard.py  dashboard_map.py  dashboard_timeseries_chart.py  dashboard_utils.py  log.py  ux_metrics.py
src/meteofungi/data_preparation/: constants.py  data_preparation.py
src/meteoshrooms/dashboard/: dashboard.py  dashboard_map.py  dashboard_timeseries_chart.py  dashboard_utils.py  log.py  settings.py  ux_metrics.py
src/meteoshrooms/data_preparation/: constants.py  data_preparation.py
tests/: test_dashboard.py  test_data_preparation.py  test_ux_metrics.py
tests/data/: ogd-smn-precip_meta_datainventory_test_data.csv  ogd-smn-precip_meta_stations_test_data.csv  ogd-smn-tower_meta_datainventory_test_data.csv  ogd-smn-tower_meta_parameters_test_data.csv  ogd-smn_meta_datainventory_test_data.csv  ogd-smn_meta_datainventory_test_result.csv  ogd-smn_meta_parameters_test_data.csv  ogd-smn_meta_parameters_test_result.csv  ogd-smn_meta_stations_test_data.csv  ogd-smn_meta_stations_test_result.csv
